intTests/test_type_errors/unify012.saw
//
// Exercise failure of the unify call in the incorrect wrong-monadic
// case of StmtBind in inferStmt. (This case was accepted prior to
// December 2024 and now has its own special-cased unify call.
//
// The special case applies only at the syntactic top leel.
//
// This checks the pattern against the value being bound to it,
// but allows it to be in the wrong monad.
//

let m : LLVMSetup () = llvm_assert {{ True }};

(x : ()) <- m;
